[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "seismic-graph"
description = "A plotting library for SEISMIC-RNA"
authors = [
    "Yves Martin des Taillades <yves@martin.yt>",
    "Casper l'Esperance Kerschoff",
    "Scott Grote"
]
license = "MIT"
repository = "https://github.com/rouskinlab/seismic-graph"
readme = "README.md"
homepage = "https://github.com/rouskinlab/seismic-graph"
keywords = ["seismic-rna", "Rouskin", "rnastructure"]

[tool.poetry.dependencies]
python = ">=3.9"


